--- a/src/components/Type/Type.scss
+++ b/src/components/Type/Type.scss
@@ -9,11 +9,82 @@
     font-size:0.48rem;
     text-align:center;
     position:relative;
+    border-bottom:0.013333rem solid #B2B2B2;
     i{
         position:absolute;
         top:0;
         right:0.133333rem;
         transform:translateY(50%);
         font-size:0.533333rem;
+    }
+}
+.t-content{
+    flex:1;
+    overflow:hidden;
+}
+//滑动块
+.swiper-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction:column;
+}
+//内容
+.swiper-wrapper{
+    width: 100%;
+    height: 100%;
+}
+//分页大盒子
+.swiper-pagination{
+    display: flex;
+    background: #fff;
+    line-height:1.333333rem;
+    position:static;
+}
+//分页
+.swiper-pagination-bullet {
+    flex:1;
+    border-radius: 0;
+    background:#fff;
+    height:1.333333rem;
+}
+.swiper-pagination-bullet-active {
+    color:#E3417C;
+    border-bottom:0.013333rem solid #E3417C;
+}
+
+.swiper-slide{
+    display:flex;
+    overflow:hidden;
+    font-size:0.346667rem;
+}
+.type{
+    width: 2.933333rem;
+    display:flex;
+    flex-direction:column;
+    li{
+        flex:1;
+        display:flex;
+        align-items:center;
+        padding-left:0.4rem;
+        background:#F6F6F6;
+    }
+    .type-alive{
+        border-left:0.026667rem solid #CF5180;
+        color:#CF5180;
+        background:#fff;
+    }
+}
+
+.TypeList{
+    flex:1;
+    overflow-x:hidden;
+    li{
+        display:flex;
+        height:1.973333rem;
+        padding:0 0.32rem;
+        justify-content:space-between;
+        align-items:center;
+        border-top:0.013333rem solid #ccc;
     }
 }
